Fix overflow of cluster files names

--- a/visualization/styles/main.css
+++ b/visualization/styles/main.css
@@ -67,11 +67,14 @@ h1 {
 	-ms-user-select: none;
 	user-select: none;
 	pointer-events: none;
-	z-index: 1; /* TODO Solve this in HTML */
+	z-index: 999; /* TODO Solve this in HTML */
   background-color: #242222;
   color: white;
   font: 11px 'Lucida Grande', sans-serif;
   text-shadow: 0 -1px 0 #111;
+  overflow-y: auto;
+  max-height: 600px;
+  pointer-events: auto;
 }
 
 ul {
